<resources>
    <string name="app_name">CMRU run</string>
    <string name="signup">Sign Up</string>
    <string name="name">Name :</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="avatar">Avatar :</string>
    <string name="title_activity_maps">Map</string>
    <string name="Back">Back</string>
    <string name="Exit">Exit</string>
</resources>
